--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <script>
-    var host = 'danialbehzadi.github.io';
+      <script>
+    var host = 'gnu.rocks';
+    if (window.location.host != host)
+	window.location.href = window.location.href.replace(window.location.host+"/weblog", host);
     if (window.location.protocol != "https:" && window.location.host == host)
-      window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
+    	window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
   </script>
-  
+    
   <meta name="twitter:card" content="summary_large_image">
   
   <meta name="twitter:image:src" content="https://danialbehzadi.github.io/weblog/assets/main/zayno-urahara-kisuke-tux.png">
